# llm-guardrails-gateway

./: .coverage  .dockerignore  .env.example  .gitignore  PROJECT_MASTER_GUIDE.md  README.md  pyproject.toml  ruff_report.json
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  middleware.py
app/api/routers/: chat.py  health.py  policies.py  validation.py
app/core/: config.py  container.py  exceptions.py  logging.py
app/guardrails/: base.py  result.py
app/guardrails/input/: jailbreak.py  language.py  pii.py  prompt_injection.py  secrets.py  token_length.py  toxicity.py
app/guardrails/output/: hallucination.py  json_schema.py  off_topic.py  prompt_leakage.py  secret_leakage.py  toxicity.py
app/policies/: hot_reload.py  loader.py  models.py
app/providers/: base.py  factory.py  litellm_provider.py  models.py  provider_orchestrator.py  strategies.py
app/retry/: engine.py  prompt_corrector.py
app/schemas/: requests.py  responses.py
app/services/: gateway.py  output_validation.py  policy.py  validation.py
app/utils/: patterns.py  text.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
policies/: default.yaml
tests/: conftest.py
tests/integration/: test_endpoints.py
tests/unit/guardrails/: test_input_guardrails.py  test_output_guardrails.py
tests/unit/policies/: test_policy_layer.py
tests/unit/providers/: test_providers.py
tests/unit/retry/: test_retry_and_gateway.py
